Added test case.

--- a/python/stockAlgorithms/DickyFuller.ipynb
+++ b/python/stockAlgorithms/DickyFuller.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -42,7 +43,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x701ca27d9f90>"
+       "<matplotlib.legend.Legend at 0x7731af3f6050>"
       ]
      },
      "execution_count": 3,
@@ -90,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x701ca13445b0>"
+       "<matplotlib.legend.Legend at 0x7731adf68880>"
       ]
      },
      "execution_count": 4,
@@ -220,7 +221,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x701ca13c5ea0>"
+       "<matplotlib.legend.Legend at 0x7731adf2f2b0>"
       ]
      },
      "execution_count": 7,
@@ -267,7 +268,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x701ca0965a50>"
+       "<matplotlib.legend.Legend at 0x7731ad58aad0>"
       ]
      },
      "execution_count": 8,
@@ -406,7 +407,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x701ca09f7be0>"
+       "<matplotlib.legend.Legend at 0x7731acb19f00>"
       ]
      },
      "execution_count": 11,
@@ -453,7 +454,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x701c9ffbac50>"
+       "<matplotlib.legend.Legend at 0x7731acbe3250>"
       ]
      },
      "execution_count": 12,
@@ -560,30 +561,38 @@
    "execution_count": 14,
    "id": "747fc050-4798-4fa4-a401-b9e8728af161",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# verify\n",
+    "t_stat_results = adfuller(x=mock3, \n",
+    "                          maxlag=1,\n",
+    "                          regression=\"ct\",\n",
+    "                          autolag=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b7c30683-b00a-4384-8930-4c0065c02ab3",
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(np.float64(-7.2646294802048725),\n",
-       " np.float64(3.5329223624326323e-09),\n",
-       " 1,\n",
-       " 98,\n",
-       " {'1%': np.float64(-4.054251125423931),\n",
-       "  '5%': np.float64(-3.4562790670553936),\n",
-       "  '10%': np.float64(-3.153866135708761)})"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved to Json\n"
+     ]
     }
    ],
    "source": [
-    "# verify\n",
-    "adfuller(x=mock3,\n",
-    "         maxlag=1,\n",
-    "         regression=\"ct\",\n",
-    "         autolag=None)"
+    "# res = {\n",
+    "#     \"stockPrices\": mock3.to_list(),\n",
+    "#     \"t-stat\": t_stat_results[0],\n",
+    "#     \"maxLag\": 1\n",
+    "# }\n",
+    "# with open('dickyFullerTest.json', 'w') as json_file:\n",
+    "#     json.dump(res, json_file)\n",
+    "# print(\"Saved to Json\")"
    ]
   }
  ],
